# otter-launcher

./: .gitignore  Cargo.toml  README.md  flake.nix
config_example/: config.0.4.0.toml  config.toml  pikachu.example
contrib/: chafa-penguin.sh  chafa-text.sh  connect-wifi.sh  external-editor-wrapper-niri.sh  external-editor-wrapper-sway.sh  otter-toggle  otter-toggle-hyprland  otter-toggle-mango  otter-toggle-niri  otter-toggle-sway  otter-toggle-sway-scratchpad  power-menu.sh  vault-password.sh
inquire/inquire/src/input/: action.rs
inquire/inquire/src/ui/: backend.rs
inquire/inquire/src/ui/api/: render_config.rs
nix/: default.nix  package.nix
nix/modules/: home-manager.nix  nixos.nix
src/: glob_vars.rs  graphics.rs  helper.rs  keybinds.rs  main.rs  main_leveled_desc.rs  mod_exec.rs
