[package]
name = "otter-launcher"
version = "0.4.3"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
once_cell = "1.21.3"
reedline = "0.39.0"
regex = "1.11.1"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
urlencoding = "2.1.3"
