[package]
name = "otter-launcher"
version = "0.6.9"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
hostname = "0.4.2"
regex = "1.11.1"
rustyline = "18.0.0"
rustyline-derive = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.4.3"
toml = "1.1.0"
urlencoding = "2.1.3"
